--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,11 @@
                             👥 Riepilogo Partecipanti
                         </a>
                     </li>
+                    <li class="nav-item me-3">
+                        <a class="btn btn-outline-info btn-sm px-3" href="{{ url_for('view_logs') }}">
+                            📜 Registro Azioni
+                        </a>
+                    </li>
                     {% endif %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle d-flex align-items-center text-42-cyan px-2" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
