--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -63,7 +63,7 @@
         <!-- Notification Preferences -->
         <div class="col-12 mt-3">
             <div class="card shadow bg-42-black border-success">
-                <div class="card-header bg-info text-white py-3">
+                <div class="card-header bg-primary text-white py-3">
                     <h4 class="mb-0">🔔 Preferenze Notifiche</h4>
                 </div>
                 <div class="card-body">
@@ -79,11 +79,11 @@
                                 </label>
                             </div>
                         </div>
-                        <div class="col-md-6 mb-3">
+                        <!-- <div class="col-md-6 mb-3">
                             <button type="button" class="btn btn-sm btn-outline-info" id="testNotificationBtn">
                                 📬 Prova Notifica
                             </button>
-                        </div>
+                        </div> -->
                     </div>
                     
                     <div id="notificationSettings">
