--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -117,7 +117,7 @@
         <div class="col-12 mt-3">
             <div class="card shadow bg-42-black border-success">
                 <div class="card-header bg-primary text-white py-3">
-                    <h4 class="mb-0">Riepilogo Eventi per Settimana</h4>
+                    <h4 class="mb-0">📋 Riepilogo Eventi per Settimana</h4>
                 </div>
                 <div class="card-body p-0">
                     {% if events_by_week %}
